# amplifier-module-hooks-approval

./: README.md  USAGE_GUIDE.md  config.example.toml  pyproject.toml
amplifier_mod_hooks_approval/: __init__.py
amplifier_module_hooks_approval/: __init__.py  approval_hook.py
tests/: test_behavioral.py  test_capability_approval.py  test_remember.py  test_tool_name_matching.py  test_tool_names.py  test_validation.py
