[project]
name = "amplifier-module-hooks-approval"
version = "0.1.0"
description = "Approval hook module for Amplifier - coordinates user approval for tool actions"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core",
]

[project.entry-points."amplifier.modules"]
hooks-approval = "amplifier_mod_hooks_approval:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"